fixed scrollbars

--- a/themes/harc/resources/styles/views/about.scss
+++ b/themes/harc/resources/styles/views/about.scss
@@ -34,7 +34,7 @@ section.about {
                 size: cover;
                 position: center;
             }
-            overflow: scroll;
+            // overflow: scroll;
 
             @media screen and (max-width:640px) {
                 width: 100%;
