--- a/themes/harc/resources/styles/views/services.scss
+++ b/themes/harc/resources/styles/views/services.scss
@@ -33,7 +33,7 @@ section.services {
                 size: cover;
                 position: center;
             }
-            overflow: scroll;
+            // overflow: scroll;
             @media screen and (max-width:640px) {
                 width: 100%;
                 padding-top: 0px;
